#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-01
2015-06-09 David Schneider
- Update DumpEpics.cpp example to cover getting data array for waveforms. JIRA PSAS-158

Tag: V00-05-00
2015-04-08 David Schneider
- Adapt to new API for histogram manager. JIRA PSAS-131

Tag: V00-04-22
2014-11-03 Mikhail Dubrovin
- DumpEpix.cpp - add support for new types Psana::Epix::Config100aV1 and Psana::Epix::ElementV2
	
Tag: V00-04-21
2014-09-23 Mikhail Dubrovin
- DumpEpix.cpp - improve output format

Tag: V00-04-20
2014-09-23 Mikhail Dubrovin
- update DumpEpix.cpp for Epix::Config10KV1 and Epix::Asic10kConfigV1 
	
Tag: V00-04-19
2014-08-08 David Schneider
- update DumpDgram to work with offsets in XtcInput::DgramList

Tag: V00-04-18
2014-07-18 David Schneider
- add DumpDgram to show how to work with XtcInput::DgramList
  trac ticket:279
	
Tag: V00-04-17
2014-06-14 David Schneider
- update DumpBld.cpp for BldDataFEEGasDetEnergyV1

Tag: V00-04-16
2014-04-30 Mikhail Dubrovin
- DumpDamage.h - fix doxygen documentation problem

Tag: V00-04-15
2014-03-21 Mikhail Dubrovin
- in DumpPimax change comment from Princeton::FrameV1 to Pimax::FrameV1
	
Tag: V00-04-14
2014-03-17 Mikhail Dubrovin
- add DumpPimax, tested for exp=amob5114:run=16
- in DumpOceanOptics.cpp add ConfigV2 and DataV2

Tag: V00-04-13
2014-03-10 David Schneider
- DumpBld: dump EBeamV5

Tag: V00-04-12
2014-02-26 David Schneider
- fixed DumpDamage so that its documentation will be added to the group

Tag: V00-04-11
2014-02-12 David Schneider
- updated for psddldata V01-00-03
- DumpPartition and dump_partition
- DumpDamage - add dump about src only, split event damage

Tag: V00-04-10